last changes in html

--- a/index.html
+++ b/index.html
@@ -9,37 +9,69 @@
 </head>
 <body>
 
-    <div class="container">
-       <h1 id="head">HTML & CSS Basics Summary </h1>
+    <div class="container"> 
+
+        <div class="header">
+
+
+
+            <h1 id="head">HTML & CSS Basics Summary </h1>
+            <br>
+            <br>
 
        <img id="img"  src="/htmlcsssum/html5-css3.jpg" alt="">
+       <br>
+       <br>
+        </div>
 
 
-       <div>
+       
+
+
+       <div class="header2">
 
         <h3 id="başlık2">HTML Summary</h3>
         <p>Our page's content, structure, and meaning are all defined using HTML (HyperText Markup Language).</p>
         <p>You don't use it for styling purposes. Instead, use CSS for that!</p>
-        <p>HTML uses "elements" to describe (annotate) content</p>
+        <br>
+        <p id="black">HTML uses "elements" to describe (annotate) content</p>
+        <br>
         <p>Typically, HTML elements have an opening tag, content, and a closing tag.</p>
-        <p>You can also have void (empty) elements like images</p>
-        <p>You can also configure elements with attributes</p>
+        <br>
+        <p id="black">You can also have void (empty) elements like images</p>
+        <br>
+        <p id="black">You can also configure elements with attributes</p>
+        <br>
         <p>There's a long list of available elements but you'll gain experience over time, no worries.</p>
-        <p>Learn more about all available HTML elements on the MDN HTML element reference</p>
+        <br>
+        <p>Learn more about all available HTML elements on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" id="link1">the MDN HTML element reference.</a>
+        </p> 
 
-        h3
+        <h3 id="başlık2">CSS Summary</h3>
 
-
-
-
+        <p>You can style the content of your page by using CSS (Cascading Style Sheets).</p>
+        <br>
+        <p>To assign styles, use property value pairs.</p>
+        <br>
+        <p>By using the "style" attribute, you can assign styles.</p>
+        <br>
+        <p id="black">Typically, global styles (such as those provided by the "style" element) are used to prevent code duplication</p>
+        <br>
+        <p>A different option is to use external stylesheet files that you "link" to " </p>
+        <br>
+        <p id="black">Understanding terms like "inheritance," "specificity," and "the box model" is essential while dealing with CSS.</p>
+        <br>
+        <p>Visit the MDN CSS property reference to learn more about all of the available CSS properties and values.</p>
+<br>
+<br>
 
        </div>
 
-
-
-
-
-
+       <div class="footer">
+        <p> <a href="#" target="_blank" id="link">Download</p>  
+            <br>    
+            <p id="copyright">© 2022</p>
+      </div>
 
     </div>
     
